--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -1,274 +1,60 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap");
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
-.header {
-  position: relative;
-  background-image: url("images/bg.png");
-  height: 90vh;
-  width: 100%;
+.name{
+    text-align: center;
+    color: hsl(120, 100%, 40%);
+    margin: 20px 0px;
 }
-.icons a {
-  color: white;
+.college{
+    text-align: center;
+    color: hsl(240, 100%, 50%);
 }
-.navbar {
-  color: white;
-  display: flex;
-  height: 50px;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 2px white dashed;
+.image{
+    display: block;
+    width: 600px;
+    height: 400px;
+    margin: 10px auto;
 }
-a {
-  color: white;
-  text-decoration: none;
+.table{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    font-size: large;
+    text-align: center;
 }
-.icons {
-  margin-left: 70px;
+th{
+    padding: 0px 20px;
+    border: 1px solid black;
 }
-.icons i {
-  font-size: 18px;
-  margin: 7px;
+td{
+    padding: 0px 20px;
+    border: 1px solid black;
 }
-.topInfo {
-  font-weight: bold;
-  display: flex;
-  margin-right: 5px;
+address{
+    text-align: center;
+    font-size: large;
 }
-.innerHead {
-  display: flex;
-  margin: 0px 20px;
+p{
+    text-align: center;
+    font-size: large;
 }
-.innerHead i {
-  margin: 5px 15px;
+.form{
+    display: block;
+    margin:10px auto;
+    width: 100%;
+    text-align: center;
 }
-.nameimg {
-  margin-left: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+input{
+    margin:5px 0px;
 }
-.bottomNav {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 25px;
-}
-.name {
-  margin-left: 25px;
-  font-size: 20px;
-  color: rgb(18, 168, 78);
-}
-.navLinks {
-  list-style: none;
-  color: white;
-  font-size: 15px;
-  margin: 0px 10px;
-}
-.navContainer ul {
-  font-weight: bold;
-  display: flex;
-  margin-right: 15px;
-}
-.dropDown {
-  font-weight: bold;
-  font-size: 15px;
-  background-color: transparent;
-  color: white;
-  border: none;
-}
-.dropDown option {
-  background-color: black;
-}
-.info {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  color: white;
-}
-.btn {
-  color: rgb(18, 168, 78);
-  background-color: white;
-  padding: 10px 25px;
-  border-radius: 5px;
-  border: none;
-  margin-top: 10px;
-  font-weight: bolder;
-  outline: none;
-}
-.btn:hover {
-  color: black;
-  border: 1px solid black;
-}
-.info h1 {
-  position: relative;
-  bottom: 90px;
-  font-weight: bolder;
-}
-.info h2 {
-  position: relative;
-  font-size: 40px;
-  bottom: 90px;
-  font-family: "Bonheur Royale", cursive;
-}
-.middle {
-  border: 1px solid rgb(18, 168, 78);
-  display: flex;
-  margin-top: 100px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 85vw;
-  height: 260px;
-}
-.middleImg img {
-  width: 310px;
-  height: 259px;
-}
+label{
+    margin:5px 0px;
 
-.middleDiv h2 {
-  font-size: 25px;
-  color: rgb(18, 168, 78);
-  margin-left: 30px;
-  font-weight: bolder;
-  margin-top: 10px;
-  margin-bottom: 15px;
 }
-.upperIcons {
-  margin-left: 30px;
-  display: flex;
-  margin-right: 20px;
-}
-.middleIcons {
-  display: flex;
-}
-.middleIcons i {
-  margin-right: 15px;
-}
-.middleIcons p {
-  font-weight: bold;
-  margin-right: 30px;
-  font-size: 15px;
-}
-.middleText {
-  font-size: 15px;
-  margin-left: 30px;
-  margin-right: 30px;
-  font-weight: bold;
-  margin-top: 25px;
-}
-.middleBtn {
-  margin-left: 30px;
-  padding: 6px 21px;
-  background-color: white;
-  color: rgb(18, 168, 78);
-  outline: none;
-  font-weight: bold;
-  border: 1px solid rgb(18, 168, 78);
-  margin-top: 20px;
-}
-.middleBtn:hover {
-  color: black !important;
-}
-.opening {
-  margin-top: 800px;
-  height: 110px;
-  width: 100%;
-  display: flex;
-  background-color: rgb(18, 168, 78);
-}
-.days {
-  display: flex;
-  margin: 20px 0px;
-}
-.innerDay {
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  color: white;
-  border-left: 1.8px solid white;
-  margin: 10px 10px;
-  padding-left: 10px;
-}
-.innerDay p {
-  font-size: 13px;
-  margin-top: 5px;
-}
-.openTitle {
-  margin: auto 100px;
-  font-size: 10px;
-  color: white;
-}
-.footer {
-  height: 350px;
-  background-color: black;
-  display: flex;
-}
-.first h1 {
-  color: rgb(18, 168, 78);
-  font-size: 22px;
-  padding-top: 40px;
-  padding-left: 70px;
-  padding-bottom: 10px;
-}
-.first .innerHead {
-  color: rgb(18, 168, 78);
-  margin: 20px 0px;
-  padding-left: 53px;
-}
-.first i {
-  margin-right: 20px;
-}
-.first p {
-  color: white;
-}
-.last {
-  margin-left: 200px;
-}
-.last p {
-  color: white;
-  margin-top: 20px;
-}
-.last h1 {
-  color: rgb(18, 168, 78);
-  font-size: 22px;
-  padding-top: 40px;
-  padding-bottom: 10px;
-}
-.last input {
-  padding-left: 10px;
-  height: 40px;
-  width: 270px;
-  margin-top: 20px;
-  outline: none;
-}
-.last button {
-  padding-left: 10px;
-  height: 40px;
-  width: 270px;
-  margin-top: 20px;
-  font-weight: bolder;
-  background-color: rgb(18, 168, 78);
-  color: white;
-  outline: none;
-  border: none;
-}
-.end{
-  text-align: center;
-  font-weight: bolder;
-  margin: 20px;
-}
-.end span{
-  color: rgb(18, 168, 78);
-}
-i:hover{
-  color: hsl(120, 100%, 50%);
+button{
+    padding: 5px;
 }
